template/iac_eval_terraform/gpt-4o/full/row_65_full_update_1_template_20250518_174907.tf
To fulfill the business need, we will create a Terraform configuration that sets up an AWS Kinesis Firehose Delivery Stream with an Elasticsearch destination. The delivery stream will be configured to deliver data to an Amazon Elasticsearch Service domain. Additionally, the Elasticsearch domain will be set up within a VPC to ensure secure communication. We will also create the necessary IAM roles and policies to allow Kinesis Firehose to write to the Elasticsearch domain.

The configuration will include:
1. An AWS VPC with subnets and a security group.
2. An Elasticsearch domain within the VPC.
3. An IAM role and policy for Kinesis Firehose to access the Elasticsearch domain.
4. A Kinesis Firehose Delivery Stream configured to deliver data to the Elasticsearch domain.

<iac_template>
```hcl
provider "aws" {
  region = "us-west-2"
}

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
}

resource "aws_subnet" "subnet1" {
  vpc_id            = aws_vpc.main.id
  cidr_block        = "10.0.1.0/24"
  availability_zone = "us-west-2a"
}

resource "aws_security_group" "es_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_elasticsearch_domain" "es_domain" {
  domain_name           = "my-es-domain"
  elasticsearch_version = "7.10"

  cluster_config {
    instance_type = "t3.small.elasticsearch"
  }

  vpc_options {
    subnet_ids        = [aws_subnet.subnet1.id]
    security_group_ids = [aws_security_group.es_sg.id]
  }
}

resource "aws_iam_role" "firehose_role" {
  name = "firehose_delivery_role"

  assume_role_policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = "sts:AssumeRole"
        Effect = "Allow"
        Principal = {
          Service = "firehose.amazonaws.com"
        }
      }
    ]
  })
}

resource "aws_iam_policy" "firehose_policy" {
  name        = "firehose_delivery_policy"
  description = "Policy for Kinesis Firehose to deliver data to Elasticsearch"

  policy = jsonencode({
    Version = "2012-10-17"
    Statement = [
      {
        Action = [
          "es:ESHttpPost",
          "es:ESHttpPut"
        ]
        Effect   = "Allow"
        Resource = aws_elasticsearch_domain.es_domain.arn
      }
    ]
  })
}

resource "aws_iam_role_policy_attachment" "firehose_policy_attach" {
  role       = aws_iam_role.firehose_role.name
  policy_arn = aws_iam_policy.firehose_policy.arn
}

resource "aws_kinesis_firehose_delivery_stream" "firehose" {
  name        = "my-firehose"
  destination = "elasticsearch"

  elasticsearch_configuration {
    role_arn            = aws_iam_role.firehose_role.arn
    domain_arn          = aws_elasticsearch_domain.es_domain.arn
    index_name          = "my-index"
    type_name           = "my-type"
    buffering_interval  = 300
    buffering_size      = 5
    retry_duration      = 300
  }
}
```
</iac_template>
